project6/Stories.html

--- a/project6/Stories.html
+++ b/project6/Stories.html
@@ -1,78 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Stories</title>
-    <link rel="stylesheet" href="projectstyles.css">
-</head>
+<html lang ="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Personal Stories</title>
+        <link rel="stylesheet" href="projectstyles.css">
+       <style>
+        
+       </style>
+    </head>
 <body>
     <nav>
-        <a href="home.html">Home</a>
-        <a href="Research.html">Research and Initiatives</a>
+        <a href="home.html">Home<span>|</span> </a>
+        <a href="Research.html">Research and Initiatives<span>|</span></a>
         <a href="Stories.html">Personal Stories</a>
     </nav>
+<h1>Personal Stories:</h1>
 
-    <h1>Personal Stories:</h1>
-
-    <div class="page3">
-        <div class="story">
-            <img src="../images/jamiet.jpeg" alt="Jamie" class="page3">
-            <p>"Growing up with dyslexia has been both a challenge and a defining part of my 
-                journey. In first grade I struggled with reading, spelling, and math, often feeling lost and resorting to 
-                "faking it" just to keep up. To figure out what was wrong, my parents had me tested where I was 
-                diagnosed with dyslexia. Imagine telling a six year-old they have dyslexia; imagine telling a six year-old 
-                who barely knows what's going on they have a learning disability that will affect them forever. In order 
-                to set me up for success, my parents sent me to the Windward School. Windward is a school that 
-                focuses on teaching children with dyslexia strategies to help them learn in the classroom. The Windward 
-                School became a turning point, providing me with strategies, confidence, and self-advocacy skills that 
-                transformed the way I learned. Returning to public school in eighth grade came with new challenges, as 
-                different teaching styles and misconceptions about dyslexia made me feel like I had to prove myself all 
-                over again. Through hard work, I advanced into AP classes and showed that my learning disability did 
-                not define my abilities. My experience has driven me to educate others about dyslexia, advocating for 
-                those who feel unheard, and the passion to pursue a future in public service where I can fight for equal 
-                opportunities for all."</p>
-            <p>- Jamie Taub, age 19</p>
-        </div>
-
-        <div class="story">
-            <img src="../images/nina.JPG" alt="Nina" class="page3">
-            <p>“Growing up I always felt like there was something wrong with me. I always 
-                wondered why all my peers were reading Harry Potter and Mystery Tree House while I was still 
-                impressed with my ability to read The Giving Tree. When most of the other kids were allowed to pick 
-                from the more advanced selection of books in class I was one of few that was only allowed to pick from 
-                the lowest reading ability section. I would always do so poorly on my spelling tests despite constant 
-                practice and help from my mom at home. For years I was put into reading groups with kids who were 
-                properly diagnosed with severe dyslexia and I was the outside kid who was just a bad reader while all 
-                the other kids went to recess. I always just thought I would one day become an excellent reader and 
-                speller and catch up to my friends but that still hasn’t happened at age 20. It took until I was 14 to be 
-                tested and diagnosed for Dyslexia and since then I have been able to be properly treated with academic 
-                support. I was able to seek help from teachers and reading specialist to help me find tools to work with 
-                my dyslexia. Today I feel less anxious and stress when having to read in front of people because I know 
-                that I am not just dumb but I am at a disadvantage but I also have the tools and resources to feel 
-                confident with my dyslexia.”</p>
-            <p>- Nina Grappone, age 20</p>
-        </div>
-
-        <div class="story">
-            <img src="../images/MichelleHeadShot.jpeg" alt="Michelle" class="page3">
-            <p>“My parents knew from an early age that I struggled in school. My mother was 
-                told by my 1st grade teacher that “not all kids go to college”. At that time, I was considered an average 
-                student in school, I got Cs and Bs but there was always a discrepancy, I could remember material easily 
-                when reading was not required. In 4th grade, my parents brought me to Hofstra University where they offered a study skills class. There 
-                was a placement test, which I failed both times I took it. My parents were told, that has never happened 
-                before. I took the class, but it did not make a difference. It is always surprising to me that my parents 
-                never took the next steps to try to figure out what was limiting me in school. I was just considered a bad 
-                test taker. In 8th grade, my teacher was very puzzled on how I could answer questions in class and remembered all 
-                the material that she taught in class but would fail the tests. She took the time with me and allowed me 
-                to take her tests after school and I aced every one of them. My parents still did not look into why I was 
-                facing challenges academically. At that time, it was ok to be an average C/B student. I never took accelerated classes and did not do 
-                well on the SAT, but I always had a great attitude. In 11th grade, I finally figured out my own strategies 
-                and started to do much better in school. I attended Syracuse University and graduated with a Policy 
-                Studies major and a dual minor in Sociology and Child/Family Studies. I then attended Columbia 
-                University and graduated with my MSW.”</p>
-            <p>- Michelle Taub, age 51</p>
-        </div>
+<div class="jamie">
+<img src="../images/jamiet.jpeg" alt="Jamie" class="page3"> 
+<p>“Growing up with dyslexia has been both a challenge and a defining part of my 
+    journey. In first grade I struggled with reading, spelling, and math, often feeling lost and resorting to 
+    "faking it" just to keep up. To figure out what was wrong, my parents had me tested where I was 
+    diagnosed with dyslexia. Imagine telling a six year-old they have dyslexia; imagine telling a six year-old 
+    who barely knows what's going on they have a learning disability that will affect them forever. In order 
+    to set me up for success, my parents sent me to the Windward School. Windward is a school that 
+    focuses on teaching children with dyslexia strategies to help them learn in the classroom. The Windward 
+    School became a turning point, providing me with strategies, confidence, and self-advocacy skills that 
+    transformed the way I learned. Returning to public school in eighth grade came with new challenges, as 
+    different teaching styles and misconceptions about dyslexia made me feel like I had to prove myself all 
+    over again. Through hard work, I advanced into AP classes and showed that my learning disability did 
+    not define my abilities. My experience has driven me to educate others about dyslexia, advocating for 
+    those who feel unheard, and the passion to pursue a future in public service where I can fight for equal 
+    opportunities for all."
+    -Jamie Taub, age 19</p><br>
+</div>
+     <div class="nina">
+    <img src="../images/nina.JPG" alt="Nina" class="page3"> 
+    <p>“Growing up I always felt like there was something wrong with me. I always 
+        wondered why all my peers were reading Harry Potter and Mystery Tree House while I was still 
+        impressed with my ability to read The Giving Tree. When most of the other kids were allowed to pick 
+        from the more advanced selection of books in class I was one of few that was only allowed to pick from 
+        the lowest reading ability section. I would always do so poorly on my spelling tests despite constant 
+        practice and help from my mom at home. For years I was put into reading groups with kids who were 
+        properly diagnosed with severe dyslexia and I was the outside kid who was just a bad reader while all 
+        the other kids went to recess. I always just thought I would one day become an excellent reader and 
+        speller and catch up to my friends but that still hasn’t happened at age 20. It took until I was 14 to be 
+        tested and diagnosed for Dyslexia and since then I have been able to be properly treated with academic 
+        support. I was able to seek help from teachers and reading specialist to help me find tools to work with 
+        my dyslexia. Today I feel less anxious and stress when having to read in front of people because I know 
+        that I am not just dumb but I am at a disadvantage but I also have the tools and resources to feel 
+        confident with my dyslexia.”
+    -Nina Grappone, age 20</p><br>
+</div>
+    <div class="michelle">
+    <img src="../images/MichelleHeadShot.jpeg" alt="Michelle" class="page3"> 
+    <p>“ My parents knew from an early age that I struggled in school. My mother was 
+        told by my 1st grade teacher that “not all kids go to college”. At that time, I was considered an average 
+        student in school, I got Cs and Bs but there was always a discrepancy, I could remember material easily 
+        when reading was not required. In 4th grade, my parents brought me to Hofstra University where they offered a study skills class. There 
+        was a placement test, which I failed both times I took it. My parents were told, that has never happened 
+        before. I took the class, but it did not make a difference. It is always surprising to me that my parents 
+        never took the next steps to try to figure out what was limiting me in school. I was just considered a bad 
+        test taker. In 8th grade, my teacher was very puzzled on how I could answer questions in class and remembered all 
+        the material that she taught in class but would fail the tests. She took the time with me and allowed me 
+        to take her tests after school and I aced every one of them. My parents still did not look into why I was 
+        facing challenges academically. At that time, it was ok to be an average C/B student. I never took accelerated classes and did not do 
+        well on the SAT, but I always had a great attitude. In 11th grade, I finally figured out my own strategies 
+        and started to do much better in school. I attended Syracuse University and graduated with a Policy 
+        Studies major and a dual minor in Sociology and Child/Family Studies. I then attended Columbia 
+        University and graduated with my MSW.”
+        -Michelle Taub, age 51
+        </p>
     </div>
+
+
 </body>
 </html>
