--- a/lab13/contact.html
+++ b/lab13/contact.html
@@ -5,9 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Contact</title>
         <link rel="stylesheet" href="styles.css">
-        <a href="#main" class="skip">Skip to main content</a>
+        <a href="#content" class="skip-to-content">Skip to Content</a>
     </head>
     <body>
+        <main id="main"></main>
         <nav>
             <a href="index.html">Home<span>|</span></a>
             <a href="skills.html">Skills<span>|</span></a>
