--- a/lab13/skills.html
+++ b/lab13/skills.html
@@ -76,6 +76,7 @@
         </style>
     </head>
     <body>
+        <main id="main"></main>
         <nav>
             <a href="index.html">Home<span>|</span></a>
             <a href="skills.html">Skills<span>|</span></a>
