lab13/index.html

--- a/lab13/contact.html
+++ b/lab13/contact.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Contact</title>
         <link rel="stylesheet" href="styles.css">
-        <a href="#content" class="skip-to-content">Skip to Content</a>
+        <a href="#main" class="skip-to-content">Skip to Content</a>
     </head>
     <body>
         <main id="main"></main>
