lab13/styles.css

--- a/lab13/index.html
+++ b/lab13/index.html
@@ -9,7 +9,7 @@
         <style>
             .self{max-width: 100%;}
         </style>
-        <a href="#main" class="skip">Skip to main content</a>
+        <a href="#main" class="skip-to-content">Skip to Content</a>
     </head>
     <body>
         <main id="main"></main>
