--- a/lab13/skills.html
+++ b/lab13/skills.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Skills</title>
         <link rel="stylesheet" href="styles.css">
-        <a href="#main" class="skip">Skip to main content</a>
+        <a href="#main" class="skip-to-content">Skip to Content</a>
         
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <style>
