--- a/lab14/contact.html
+++ b/lab14/contact.html
@@ -8,6 +8,7 @@
     <a href="#main" class="skip-to-content">Skip to Content</a>
 </head>
 <body>
+    <a href="#main" class="skip-to-content">Skip to Content</a>
     <main id="main"></main>
     <nav>
         <a href="index.html">Home<span>|</span></a>
