--- a/lab14/contact.html
+++ b/lab14/contact.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="styles.css">
-    <a href="#main" class="skip-to-content">Skip to Content</a>
+    <style>
+        
+        .skip-to-content {
+            display: none;
+        }
+        </style>
 </head>
 <body>
     <a href="#main" class="skip-to-content">Skip to Content</a>
