--- a/lab14/index.html
+++ b/lab14/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> Taub-Bio</title>
         <link rel="stylesheet" href="styles.css">
-       
+         <link rel="shortcut icon" type="image/x-icon" href="../images/favicon (1).ico">
         <style>
             .self{max-width: 100%;}
         </style>
