--- a/lab14/contact.html
+++ b/lab14/contact.html
@@ -5,24 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-         .skip-to-content {
-            position: absolute;  /* Remove from normal flow */
-            top: -100px;         /* Move it offscreen */
-            left: 0;
-            background-color: yellow;
-            padding: 5px;
-            z-index: 100;        /* Ensure it stays on top */
-        }
-
-        /* Show the link when it receives focus */
-        .skip-to-content:focus {
-            top: 10px;          /* Move the link into view */
-            left: 10px;         /* Position it in view */
-            visibility: visible; /* Make it visible */
-        }
-        
-        </style>
+    <link rel="shortcut icon" type="image/x-icon" href="../images/favicon (1).ico">
 </head>
 <body>
     <a href="#main" class="skip-to-content">Skip to Content</a>
