project6/Stories.html

--- a/project6/Stories.html
+++ b/project6/Stories.html
@@ -27,12 +27,13 @@
     to set me up for success, my parents sent me to the Windward School. Windward is a school that 
     focuses on teaching children with dyslexia strategies to help them learn in the classroom. The Windward 
     School became a turning point, providing me with strategies, confidence, and self-advocacy skills that 
-    transformed the way I learned. Returning to public school in eighth grade came with new challenges, as 
+    transformed the way I learned.<br>
+     Returning to public school in eighth grade came with new challenges, as 
     different teaching styles and misconceptions about dyslexia made me feel like I had to prove myself all 
     over again. Through hard work, I advanced into AP classes and showed that my learning disability did 
     not define my abilities. My experience has driven me to educate others about dyslexia, advocating for 
     those who feel unheard, and the passion to pursue a future in public service where I can fight for equal opportunities for all."<br>
-    -Jamie Taub, age 19</p><br>
+    </p><em>-Jamie Taub, age 19</em><br>
 </div>
      <div class="nina">
     <img src="../images/nina.JPG" alt="Nina" class="page3"> 
@@ -44,12 +45,12 @@
         practice and help from my mom at home. For years I was put into reading groups with kids who were 
         properly diagnosed with severe dyslexia and I was the outside kid who was just a bad reader while all 
         the other kids went to recess. I always just thought I would one day become an excellent reader and 
-        speller and catch up to my friends but that still hasn’t happened at age 20. It took until I was 14 to be 
-        tested and diagnosed for Dyslexia and since then I have been able to be properly treated with academic 
+        speller and catch up to my friends but that still hasn’t happened at age 20. <br>
+        It took until I was 14 to be tested and diagnosed for Dyslexia and since then I have been able to be properly treated with academic 
         support. I was able to seek help from teachers and reading specialist to help me find tools to work with 
         my dyslexia. Today I feel less anxious and stress when having to read in front of people because I know 
         that I am not just dumb but I am at a disadvantage but I also have the tools and resources to feel confident with my dyslexia.”<br>
-    -Nina Grappone, age 20</p><br>
+    </p><em>-Nina Grappone, age 20</em><br>
 </div>
     <div class="michelle">
     <img src="../images/MichelleHeadShot.jpeg" alt="Michelle" class="page3"> 
@@ -60,15 +61,15 @@
         was a placement test, which I failed both times I took it. My parents were told, that has never happened 
         before. I took the class, but it did not make a difference. It is always surprising to me that my parents 
         never took the next steps to try to figure out what was limiting me in school. I was just considered a bad 
-        test taker. In 8th grade, my teacher was very puzzled on how I could answer questions in class and remembered all 
+        test taker. <br>
+        In 8th grade, my teacher was very puzzled on how I could answer questions in class and remembered all 
         the material that she taught in class but would fail the tests. She took the time with me and allowed me 
         to take her tests after school and I aced every one of them. My parents still did not look into why I was 
         facing challenges academically. At that time, it was ok to be an average C/B student. I never took accelerated classes and did not do 
         well on the SAT, but I always had a great attitude. In 11th grade, I finally figured out my own strategies 
         and started to do much better in school. I attended Syracuse University and graduated with a Policy 
         Studies major and a dual minor in Sociology and Child/Family Studies. I then attended Columbia University and graduated with my MSW.” <br>
-        -Michelle Taub, age 51
-        </p>
+        </p> <em>-Michelle Taub, age 51</em>
     </div>
 
 
