--- a/lab14/contact.html
+++ b/lab14/contact.html
@@ -6,6 +6,9 @@
     <title>Contact</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" type="image/x-icon" href="../images/favicon (1).ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <a href="#main" class="skip-to-content">Skip to Content</a>
