--- a/lab14/skills.html
+++ b/lab14/skills.html
@@ -74,6 +74,9 @@
             }
 
         </style>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
     <body>
         <a href="#main" class="skip-to-content">Skip to Content</a>
