--- a/project6/Stories.html
+++ b/project6/Stories.html
@@ -75,7 +75,13 @@
         <br><em>-Michelle Taub, age 51</em>
     </p> 
     </div>
-
+    <footer>
+        <p>&copy; 2025 Personal Stories. All Rights Reserved.</p>
+        <p>
+            <a href="privacy.html">Privacy Policy</a> | 
+            <a href="contact.html">Contact Us</a>
+        </p>
+    </footer>
 
 </body>
 </html>
