project6/contactus.html

--- a/project6/Stories.html
+++ b/project6/Stories.html
@@ -81,6 +81,11 @@
             <a href="privacy.html">Privacy Policy</a> | 
             <a href="contact.html">Contact Us</a>
         </p>
+        <p>
+            <a href="home.html">Home<span>|</span> </a>
+        <a href="Research.html">Research and Initiatives<span>|</span></a>
+        <a href="Stories.html">Personal Stories</a>
+        </p>
     </footer>
 
 </body>
