--- a/project6/contactus.html
+++ b/project6/contactus.html
@@ -111,8 +111,13 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="email">Your Email</label>
-                    <input type="email" id="email" name="email" required placeholder="Enter your email">
+                    <label for="name">Jamie Taub</label>
+                    <p><a href="mailto:nmgrappo@syr.edu">jrtaub@syr.edu</a></p>
+                </div>
+
+                <div class="form-group">
+                    <label for="name">Jamie Taub</label>
+                    <p><a href="mailto:mhtaub@gmail.com">jrtaub@syr.edu</a></p>
                 </div>
 
                 <div class="form-group">
