project6/Stories.html

--- a/project6/contactus.html
+++ b/project6/contactus.html
@@ -111,13 +111,13 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="name">Jamie Taub</label>
-                    <p><a href="mailto:nmgrappo@syr.edu">jrtaub@syr.edu</a></p>
+                    <label for="name">Nina Grappone</label>
+                    <p><a href="mailto:nmgrappo@syr.edu">nmgrappo@syr.edu</a></p>
                 </div>
 
                 <div class="form-group">
-                    <label for="name">Jamie Taub</label>
-                    <p><a href="mailto:mhtaub@gmail.com">jrtaub@syr.edu</a></p>
+                    <label for="name">Michelle Taub</label>
+                    <p><a href="mailto:mhtaub@gmail.com">mhtaub@gmail.com</a></p>
                 </div>
 
                 <div class="form-group">
@@ -135,7 +135,12 @@
             <p>&copy; 2025 Personal Stories. All Rights Reserved.</p>
             <p>
                 <a href="privacy.html">Privacy Policy</a> | 
-                <a href="terms.html">Terms of Service</a>
+                <a href="contactus.html">Contact Us</a>
+            </p>
+            <p>
+                <a href="home.html">Home<span>|</span> </a>
+            <a href="Research.html">Research and Initiatives<span>|</span></a>
+            <a href="Stories.html">Personal Stories</a>
             </p>
         </footer>
     </body>
