--- a/project6/Stories.html
+++ b/project6/Stories.html
@@ -79,7 +79,7 @@
         <p>&copy; 2025 Personal Stories. All Rights Reserved.</p>
         <p>
             <a href="privacy.html">Privacy Policy</a> | 
-            <a href="contact.html">Contact Us</a>
+            <a href="contactus.html">Contact Us</a>
         </p>
         <p>
             <a href="home.html">Home<span>|</span> </a>
