project7/home.html

--- a/project7/Research.html
+++ b/project7/Research.html
@@ -3,16 +3,21 @@
     <head>
         <meta charset="utf-8">
         <title>Research and Initiatives</title>
-       
+        <link rel="stylesheet" href="projectstyles.css">
     </head>
 <body>
     <nav>
-        <a href="home.html">Home|</a>
-        <a href="Research.html">Research and Initiatives|</a>
+        <a href="home.html">Home<span>|</span> </a>
+        <a href="Research.html">Research and Initiatives<span>|</span></a>
         <a href="Stories.html">Personal Stories</a>
     </nav>
+
+
     <h1>Research Studies</h1>
-    <img src="../images/brain.png" alt="figure2" class="page2"> 
+    <section class="research-row">
+    <div class="research-container">
+        <img src="../images/brain.png" alt="Research Image"class="page2">
+        <div class="text">
     <p>A research study from December of 2024 investigated polygenic disposition in the brain of an individual 
         with dyslexia. The research looked to further understand how predispositions for dyslexia contribute to
         how the brain is structured and how it functions. To conduct the research, research used data from UK 
@@ -29,9 +34,15 @@
         cognitive control, eluting to the fact that dyslexia can involve more cognitive challenges then just 
         reading difficulties.The research works to highlight the complex neurobiological basis of dyslexia, demonstrating that it is not caused by a single deficit but by multiple, distinct neural pathways 
         interacting with genetic factors.</p><br>
+    </div>
+</div>
           
-        <img src="../images/dyslexiabrain.png" alt="figure4" class="page2"> 
 
+   
+
+    <div class="research-section">
+        <img src="../images/dyslexiabrain.png" alt="Research Image" class="page2">
+        <div class="text">
         <p>The study "Disrupted network interactions serve as a neural marker of dyslexia" provides critical insights 
             into the neural mechanisms underlying dyslexia by identifying specific disruptions in brain network 
             interactions. Using functional MRI (fMRI), researchers found that individuals with dyslexia reveal a 
@@ -46,8 +57,15 @@
             disrupted connections act as a sign of neural markers for dyslexia and how they may inform targeted 
             interventions aimed at improving brain connectivity to enhance reading abilities.</p><br>
 
-            <h2>Initiative</h2>
-            <img src="../images/iamdyslexic.png" alt="pictice1" class="page2"> 
+        </div>
+    </div>
+</section>
+
+
+<section class="initiative-container">
+    <img src="../images/iamdyslexic.png" alt="Dyslexia Initiative" class="page2">
+    <div class="text">
+        <h2>Initiative</h2>
             <p>The article "Instructional and Assistive Technology: Maximizing the Benefits for Students Who Struggle" 
                 from the International Dyslexia Association highlights the transformative role of technology in 
                 supporting students with dyslexia and other learning disabilities. It differentiates between Instructional 
@@ -61,9 +79,18 @@
                 text-to-speech software, audiobooks, speech recognition, and other adaptive technologies. The article 
                 suggests that when implemented the correct way, assistive and instructional technologies can enhance 
                 learning, independent academic success for students with learning disabilities.</p>
+            </div>
+        </section>
 
-
-
+                <footer>
+                    <p>&copy; 2025 Personal Stories. All Rights Reserved.</p>
+                    <p>
+                        <a href="contactus.html">Contact Us</a><span>|</span> </a>
+                        <a href="home.html">Home</a><span>|</span> </a>
+                    <a href="Research.html">Research and Initiatives</a><span>|</span></a>
+                    <a href="Stories.html">Personal Stories</a></a>
+                    </p>
+                </footer>
 
 
 
