project7/index.html

--- a/project7/Stories.html
+++ b/project7/Stories.html
@@ -11,7 +11,7 @@
     </head>
 <body>
     <nav>
-        <a href="home.html">Home<span>|</span> </a>
+        <a href="index.html">Home<span>|</span> </a>
         <a href="Research.html">Research and Initiatives<span>|</span></a>
         <a href="Stories.html">Personal Stories</a>
     </nav>
