--- a/project7/index.html
+++ b/project7/index.html
@@ -38,7 +38,7 @@
     <body>
         
         <nav>
-            <a href="home.html">Home<span>|</span> </a>
+            <a href="index.html">Home<span>|</span> </a>
             <a href="Research.html">Research and Initiatives<span>|</span></a>
             <a href="Stories.html">Personal Stories</a>
         </nav>
