project7/contactus.html

--- a/project7/contactus.html
+++ b/project7/contactus.html
@@ -136,7 +136,7 @@
             
             <p>
                 <a href="contactus.html">Contact Us</a><span>|</span> </a>
-                <a href="home.html">Home</a><span>|</span> </a>
+                <a href="index.html">Home</a><span>|</span> </a>
             <a href="Research.html">Research and Initiatives</a><span>|</span></a>
             <a href="Stories.html">Personal Stories</a></a>
             </p>
