--- a/project7/Stories.html
+++ b/project7/Stories.html
@@ -79,7 +79,7 @@
         <p>&copy; 2025 Personal Stories. All Rights Reserved.</p>
         <p>
             <a href="contactus.html">Contact Us</a><span>|</span> </a>
-            <a href="home.html">Home</a><span>|</span> </a>
+            <a href="index.html">Home</a><span>|</span> </a>
         <a href="Research.html">Research and Initiatives</a><span>|</span></a>
         <a href="Stories.html">Personal Stories</a></a>
         </p>
