--- a/project7/Research.html
+++ b/project7/Research.html
@@ -4,8 +4,10 @@
         <meta charset="utf-8">
         <title>Research and Initiatives</title>
         <link rel="stylesheet" href="projectstyles.css">
+        <a href="#main" class="skip-to-content">Skip to Content</a>
     </head>
 <body>
+    <main id="main"></main>
     <nav>
         <a href="index.html">Home<span>|</span> </a>
         <a href="Research.html">Research and Initiatives<span>|</span></a>
