--- a/project7/Stories.html
+++ b/project7/Stories.html
@@ -5,11 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Personal Stories</title>
         <link rel="stylesheet" href="projectstyles.css">
-       <style>
-        
-       </style>
+        <a href="#main" class="skip-to-content">Skip to Content</a>
     </head>
 <body>
+    <main id="main"></main>
     <nav>
         <a href="index.html">Home<span>|</span> </a>
         <a href="Research.html">Research and Initiatives<span>|</span></a>
