--- a/project7/contactus.html
+++ b/project7/contactus.html
@@ -97,8 +97,10 @@
                 text-decoration: underline;
             }
         </style>
+        <a href="#main" class="skip-to-content">Skip to Content</a>
     </head>
     <body>
+        <main id="main"></main>
         <header>
             <h1>Contact Us</h1>
         </header>
