--- a/project7/Stories.html
+++ b/project7/Stories.html
@@ -34,7 +34,7 @@
     not define my abilities. My experience has driven me to educate others about dyslexia, advocating for 
     those who feel unheard, and the passion to pursue a future in public service where I can fight for equal opportunities for all."<br>
     <br><em>-Jamie Taub, age 19</em></p>
-</p>
+
     
 </div>
      <div class="nina">
@@ -54,7 +54,7 @@
         my dyslexia. Today I feel less anxious and stress when having to read in front of people because I know 
         that I am not just dumb but I am at a disadvantage but I also have the tools and resources to feel confident with my dyslexia.”<br>
     <br><em>-Nina Grappone, age 20</em></p>
-    </p>
+    
 </div>
     <div class="michelle">
     <img src="../images/MichelleHeadShot.jpeg" alt="Michelle" class="page3"> 
@@ -81,10 +81,10 @@
     <footer>
         <p>&copy; 2025 Personal Stories. All Rights Reserved.</p>
         <p>
-            <a href="contactus.html">Contact Us</a><span>|</span> </a>
-            <a href="index.html">Home</a><span>|</span> </a>
-        <a href="Research.html">Research and Initiatives</a><span>|</span></a>
-        <a href="Stories.html">Personal Stories</a></a>
+            <a href="contactus.html">Contact Us</a><span>|</span>
+            <a href="index.html">Home</a><span>|</span> 
+        <a href="Research.html">Research and Initiatives</a><span>|</span>
+        <a href="Stories.html">Personal Stories</a>
         </p>
     </footer>
 
