--- a/project7/Research.html
+++ b/project7/Research.html
@@ -89,7 +89,10 @@
         </style>
 
 
-
+<link rel="shortcut icon" type="image/x-icon" href="../images/favicon (1).ico">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
 
     </head>
