--- a/project7/Stories.html
+++ b/project7/Stories.html
@@ -5,7 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Personal Stories</title>
         <link rel="stylesheet" href="projectstyles.css">
-       
+        <link rel="shortcut icon" type="image/x-icon" href="../images/favicon (1).ico">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
 <body>
     <a href="#main" class="skip-to-content">Skip to Content</a>
