project7/contactus.html

--- a/project7/Research.html
+++ b/project7/Research.html
@@ -111,7 +111,7 @@
         
         <div class="research-container" onclick="openModal(1)">
             <div class="text">
-                <p><strong>Click On the Image!</strong></p><br>
+                <p><strong>Click on the image!</strong></p><br>
             </div>
             <img src="../images/brain.png" alt="Research Image" class="page2">
         </div>
@@ -119,7 +119,7 @@
          
         <div class="research-section" onclick="openModal(2)">
             <div class="text">
-                <p><strong>Click On the Image!</strong></p><br>
+                <p><strong>Click on the image!</strong></p><br>
             </div>
             <img src="../images/dyslexiabrain.png" alt="Research Image" class="page2">
         </div>
