--- a/project7/contactus.html
+++ b/project7/contactus.html
@@ -112,7 +112,7 @@
 
 
         <div class="contact-container">
-            <form class="contact-form" action="submit_form.php" method="POST">
+            <form class="contact-form" action="https://formspree.io/f/xldbgbwj" method="POST">
                 <div class="form-group">
                     <label for="name">Jamie Taub</label>
                     <p><a href="mailto:jrtaub@syr.edu">jrtaub@syr.edu</a></p>
