project7/contactus.html

--- a/project7/contactus.html
+++ b/project7/contactus.html
@@ -7,13 +7,7 @@
         <link rel="stylesheet" href="projectstyles.css">
         <style>
             h1{color: white;}
-            body {
-                font-family: Arial, sans-serif;
-                background-color: #f4f4f4;
-                margin: 0;
-                padding: 0;
-            }
-
+           
             header {
                 background-color:#fa37b3f9;
                 color: white;
@@ -75,27 +69,7 @@
                 font-size: 1.2em;
             }
 
-            .form-group button:hover {
-                background-color: #00358f;
-            }
-
-            footer {
-                background-color: #fa37b3f9;
-                color: white;
-                text-align: center;
-                padding: 20px;
-                margin-top: 40px;
-            }
-
-            footer a {
-                color: white;
-                text-decoration: none;
-                margin: 0 10px;
-            }
-
-            footer a:hover {
-                text-decoration: underline;
-            }
+            .form-group button:hover { background-color: #00358f;}
         </style>
     <link rel="shortcut icon" type="image/x-icon" href="../images/favicon (1).ico">
         <link rel="preconnect" href="https://fonts.googleapis.com">
