--- a/project7/Stories.html
+++ b/project7/Stories.html
@@ -41,7 +41,7 @@
     
 </div>
      <div class="nina">
-    <img src="../images/nina.JPG" alt="Nina" class="page3"> 
+    <img src="../images/nina 6.jpg" alt="Nina" class="page3"> 
     <p>“Growing up I always felt like there was something wrong with me. I always 
         wondered why all my peers were reading Harry Potter and Mystery Tree House while I was still 
         impressed with my ability to read The Giving Tree. When most of the other kids were allowed to pick 
