project7/index.html

--- a/project7/Stories.html
+++ b/project7/Stories.html
@@ -20,7 +20,7 @@
     </nav>
 <h1>Personal Stories:</h1>
 
-<div class="jamie">
+<div class="jamie" tabindex="0">
 <img src="../images/jamiet.jpeg" alt="Jamie" class="page3"> 
 <p>“Growing up with dyslexia has been both a challenge and a defining part of my 
     journey. In first grade I struggled with reading, spelling, and math, often feeling lost and resorting to 
@@ -40,7 +40,7 @@
 
     
 </div>
-     <div class="nina">
+     <div class="nina" tabindex="0">
     <img src="../images/nina-3.jpg" alt="Nina" class="page3"> 
     <p>“Growing up I always felt like there was something wrong with me. I always 
         wondered why all my peers were reading Harry Potter and Mystery Tree House while I was still 
@@ -59,7 +59,7 @@
     <br><em>-Nina Grappone, age 20</em></p>
     
 </div>
-    <div class="michelle">
+    <div class="michelle" tabindex="0">
     <img src="../images/MichelleHeadShot.jpeg" alt="Michelle" class="page3"> 
     <p>“ My parents knew from an early age that I struggled in school. My mother was 
         told by my 1st grade teacher that “not all kids go to college”. At that time, I was considered an average 
