project7/index.html

--- a/project7/index.html
+++ b/project7/index.html
@@ -17,8 +17,8 @@
         <a href="#main" class="skip-to-content">Skip to Content</a>
         <main id="main"></main>
         <nav>
-        <a href="index.html">Home</a><span>|</span> 
-        <a href="Research.html">Research and Initiatives</a><span>|</span>
+        <a href="index.html">Home<span>|</span></a> 
+        <a href="Research.html">Research and Initiatives<span>|</span></a>
         <a href="Stories.html">Personal Stories</a>
         </nav>
 
