--- a/project7/Research.html
+++ b/project7/Research.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang ="en">
     <head>
-        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Research and Initiatives</title>
         <link rel="stylesheet" href="projectstyles.css">
         <style>
