--- a/project7/index.html
+++ b/project7/index.html
@@ -48,7 +48,7 @@
             
                     <div class="dyslexia-type" tabindex="0">
                         <h3>Double Deficit Dyslexia</h3>
-                        <p>this form of dyslexia is a combination of phonological and rapid naming dyslexia. Since individuals will struggle with identifying sounds and naming speed, double deficit is known as the most severe branch.</p>
+                        <p>is a combination of phonological and rapid naming dyslexia. Since individuals will struggle with identifying sounds and naming speed, double deficit is known as the most severe branch.</p>
                     </div>
             
                     <div class="dyslexia-type" tabindex="0">
